--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
-    "name": "zephn/wr-laravel-administration",
+    "name": "webregulate/laravel-administration",
     "description": "WebRegulate base administration panel for Laravel",
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Zephn\\WrLaravelAdministration\\": "src/"
+            "WebRegulate\\LaravelAdministration\\": "src/"
         }
     },
     "authors": [
