Fixes for new namespace pathing for User. ServiceProvider now automatically loads through composer so user does not have to manually add it to their application's provider list

--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,13 @@
             "WebRegulate\\LaravelAdministration\\": "src/"
         }
     },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "WebRegulate\\LaravelAdministration\\WRLAServiceProvider"
+            ]
+        }
+    },
     "authors": [
         {
             "name": "Craig Dennis",
