Update ManageableModel permissions handling and remove unused getString methods

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     ],
     "minimum-stability": "stable",
     "require": {
+        "php": "^8.2",
         "livewire/livewire": "^3.4",
         "intervention/image": "^3.6",
         "wire-elements/modal": "^2.0"
