Add log-viewer asset publishing in InstallCommand: enhance installation process by including log-viewer assets

--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "livewire/livewire": "^3.4",
         "intervention/image": "^3.6",
         "wire-elements/modal": "^2.0",
-        "reedware/laravel-relation-joins": "^8.0"
+        "reedware/laravel-relation-joins": "^8.0",
+        "opcodesio/log-viewer": "^3.15"
     }
 }
